--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>projects</groupId>
+    <groupId>workshopuservice</groupId>
     <artifactId>operacaocartao</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -115,6 +115,16 @@
             <version>2.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+		    <groupId>org.mongodb</groupId>
+		    <artifactId>mongo-java-driver</artifactId>
+		    <version>3.8.0</version>
+		</dependency>
+		    <dependency>
+		        <groupId>org.mongodb</groupId>
+		        <artifactId>mongodb-driver-core</artifactId>
+		        <version>3.8.0</version>
+		    </dependency>		
     </dependencies>
 
     <build>
@@ -202,7 +212,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Plugin to run functional tests -->
+            <!-- Plugin to run functional tests 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
@@ -235,7 +245,7 @@
                     <summaryFile>${project.build.directory}/test-reports/it/failsafe-summary.xml</summaryFile>
                     <reportsDirectory>${project.build.directory}/test-reports/it</reportsDirectory>
                 </configuration>
-            </plugin>
+            </plugin> -->
         </plugins>
     </build>
 
