--- a/chart/cartao/templates/deployment.yaml
+++ b/chart/cartao/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
 {{ else }}
         readinessProbe:
           httpGet:
-            path: /cartao/health
+            path: /operacoes-cartao/health
             port: 9080
           initialDelaySeconds: 20
 {{ end }}
