--- a/chart/cartao/values.yaml
+++ b/chart/cartao/values.yaml
@@ -16,9 +16,9 @@ service:
   servicePort: 9080
   servicePortHttps: 9443
 hpa:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 2
+  maxReplicas: 4
   metrics:
     cpu:
       targetAverageUtilization: 70
