--- a/src/main/liberty/config/server.env
+++ b/src/main/liberty/config/server.env
@@ -1,2 +1,2 @@
-mongo.remote.url=mongodb://169.57.160.83:27017
-mongo.local.url=<>
+MONGO_REMOTE_URL=mongodb://169.57.160.83:27017
+MONGO_LOCAL_URL=NONE
