--- a/chart/cartao/templates/deployment.yaml
+++ b/chart/cartao/templates/deployment.yaml
@@ -32,12 +32,12 @@ spec:
         env:
           - name: MONGO_REMOTE_URL
             valueFrom:
-              secretKeyRef:
+              configMapKeyRef:
                 name: "{{  .Chart.Name }}-config"
                 key: MONGO_REMOTE_URL
           - name: MONGO_LOCAL_URL
             valueFrom:
-              secretKeyRef:
+              configMapKeyRef:
                 name: "{{  .Chart.Name }}-config"
                 key: MONGO_LOCAL_URL      
           - name: PORT
